# rocket_example

./: Cargo.toml  Rocket.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/daos/: mod.rs  post_dao.rs
core/src/services/: post_service.rs
core/tests/: mock.rs
entity/: Cargo.toml
migration/: Cargo.toml
src/: main.rs
web/: Cargo.toml
web/src/: lib.rs
