[package]
name = "rocket-example-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
# path = "../../../" # remove this line in your own project
version = "0.11.3" # sea-orm version
features = [
    # 会导致跨平台编译报错？？SSL_ctrl等函数找不到？？
    # "runtime-tokio-native-tls",
    "runtime-tokio-rustls",
    # "sqlx-postgres",
    "sqlx-mysql",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = "1.20.0"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
